Simulates mouseover to highlight group-arrow when selected with keyboard

BUG: 322196
FIXED-IN: 0.6.3
Reviewed-by: David Edmundson